# individuums

./: Cargo.toml  README.md
src/: andis.rs  creature.rs  genes.rs  main.rs  ui.rs  world.rs
