[package]
name = "brains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
num-traits = "*"
num-derive = "*"
sdl2 = "0.35.1"
gl = "*"
egui = "*"
egui_sdl2_gl = { path = "ext/egui_sdl2_gl" }


[features]

default = ["sdl2/bundled"]
